--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="footer__container">
     <div class="footer__container">
       <p>
-        &copy; 2025 Kepler-Gymnasium Schülerforschungswerkstatt -
+        &copy; {{ now.Year }} Kepler-Gymnasium Schülerforschungswerkstatt -
         <a
           href="https://github.com/plesioo/SFW-Website/blob/master/LICENSE"
           title="View source code license"
