--- a/layouts/index.html
+++ b/layouts/index.html
@@ -49,8 +49,7 @@ fingerprint -}}
           <h3 class="home__subtitle">{{ .Title }}</h3>
           <p class="home__text">
             {{ with .Params.articleInfo.description }} {{ . | safeHTML }} {{
-            else }} {{ with .Params.articleInfo.body }}{{ . | safeHTML }}{{ end
-            }} {{ end }}
+            else }} {{ with .Content }}{{ . | plainify }}{{ end }} {{ end }}
           </p>
         </article>
         {{ end }} {{ end }}
@@ -70,8 +69,7 @@ fingerprint -}}
           <h3 class="home__subtitle">{{ .Params.courseInfo.title }}</h3>
           <p class="home__text">
             {{ with .Params.articleInfo.description }} {{ . | safeHTML }} {{
-            else }} {{ with .Params.articleInfo.body }}{{ . | safeHTML }}{{ end
-            }} {{ end }}
+            else }} {{ with .Content }}{{ . | plainify }}{{ end }} {{ end }}
           </p>
         </article>
         {{ end }} {{ end }}
