feat: improve single article styles

--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -4,7 +4,7 @@ main {
 }
 
 .container {
-  width: 80%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -73,6 +73,15 @@ main {
 
 .markdown__container h3 {
   font-size: 1.25rem;
+}
+
+/* Paragraphs */
+.markdown__container p {
+  margin-bottom: 1em;
+}
+
+.markdown__container p:last-child {
+  margin-bottom: 0;
 }
 
 /* Text formatting */
@@ -223,7 +232,7 @@ main {
 @media (min-width: 1024px) {
   .container {
     gap: 2em;
-    width: 70%;
+    width: 75%;
   }
 
   .article__title {
@@ -236,7 +245,7 @@ main {
 
   .markdown__container {
     font-size: 1.25rem;
-    line-height: 2;
+    line-height: 2.25;
   }
 
   .markdown__container h1,
@@ -293,10 +302,6 @@ main {
 
   .article__container {
     font-size: 1.5rem;
-  }
-
-  .markdown__container {
-    line-height: 2;
   }
 
   .markdown__container h1 {
