--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -2,7 +2,7 @@
   background-image: url("../images/page/sfw-hero-bg.png");
   background-color: white;
   width: 100%;
-  height: 20vh;
+  height: 300px;
   background-size: cover;
   background-position: center;
   position: relative;
@@ -34,7 +34,8 @@
 
 @media (min-width: 750px) {
   .hero {
-    height: 40vh;
+    min-height: 400px;
+    height: 65vh;
   }
 
   .hero__title {
