--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -27,6 +27,12 @@ main {
   font-size: 0.875em;
 }
 
+/* Figure */
+
+.article__figure {
+  width: 100%;
+}
+
 .article__image {
   margin-inline: auto;
   max-height: 750px;
@@ -38,6 +44,14 @@ main {
 .article__image,
 .article__container {
   width: 100%;
+}
+
+.article__caption {
+  margin-top: 0.5em;
+  font-size: 0.75rem;
+  line-height: 1.3;
+  color: #6b6b6b; 
+  text-align: center;
 }
 
 /* Markdown styles */
@@ -208,6 +222,10 @@ main {
     font-size: 1.125rem;
   }
 
+  .article__caption {
+    font-size: 0.875rem;
+  }
+
   .markdown__container {
     line-height: 1.6;
     font-size: 1.25rem;
@@ -243,6 +261,11 @@ main {
 
   .article__container {
     font-size: 1.25rem;
+  }
+
+  .article__caption {
+    margin-top: 0.75em;
+    font-size: 1rem;
   }
 
   .markdown__container {
