--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -1,6 +1,6 @@
 main {
   margin-block: 2em;
-  color: #111827;
+  color: var(--article-text);
 }
 
 .container {
@@ -23,7 +23,7 @@ main {
   justify-content: start;
   gap: 1em;
   width: 100%;
-  color: #6b6b6b;
+  color: var(--article-meta-text);
   font-size: 0.875em;
 }
 
@@ -50,7 +50,7 @@ main {
   margin-top: 0.5em;
   font-size: 0.75rem;
   line-height: 1.3;
-  color: #6b6b6b; 
+  color: var(--article-meta-text); 
   text-align: center;
 }
 
@@ -58,7 +58,7 @@ main {
 
 .markdown__container {
   line-height: 1.875;
-  color: #374151;
+  color: var(--article-body-text);
   word-wrap: break-word;
 }
 
@@ -78,13 +78,13 @@ main {
 .markdown__container h1 {
   font-size: 2rem;
   padding-bottom: 0.3em;
-  border-bottom: 1px solid #d1d9e0;
+  border-bottom: 1px solid var(--article-border);
 }
 
 .markdown__container h2 {
   font-size: 1.5rem;
   padding-bottom: 0.3em;
-  border-bottom: 1px solid #d1d9e0;
+  border-bottom: 1px solid var(--article-border);
 }
 
 .markdown__container h3 {
@@ -116,7 +116,7 @@ main {
     ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono,
     monospace;
   font-size: 85%;
-  background-color: #f6f8fa;
+  background-color: var(--article-code-bg);
   border-radius: 6px;
 }
 
@@ -183,8 +183,8 @@ main {
 .markdown__container blockquote {
   margin: 0 0 1em 0;
   padding: 0 1em;
-  color: #59636e;
-  border-left: 0.25em solid #d1d9e0;
+  color: var(--article-blockquote-text);
+  border-left: 0.25em solid var(--article-border);
 }
 
 .markdown__container blockquote > :first-child {
@@ -197,7 +197,7 @@ main {
 
 /* Links */
 .markdown__container a {
-  color: #0969da;
+  color: var(--article-link);
   text-decoration: none;
 }
 
