--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -50,7 +50,7 @@ main {
   margin-top: 0.5em;
   font-size: 0.75rem;
   line-height: 1.3;
-  color: var(--article-meta-text); 
+  color: var(--article-meta-text);
   text-align: center;
 }
 
@@ -109,9 +109,8 @@ main {
 /* Code */
 .markdown__container code,
 .markdown__container pre {
-  font-family:
-    ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono,
-    monospace;
+  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas,
+    Liberation Mono, monospace;
   font-size: 85%;
   background-color: var(--article-code-bg);
   border-radius: 6px;
@@ -174,6 +173,17 @@ main {
 
 .markdown__container ol {
   list-style-type: decimal;
+}
+
+.container .markdown__container--info-list {
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.markdown__container--info-list li {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
 }
 
 /* Blockquotes */
