--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -73,8 +73,11 @@ header {
   background-color: var(--foreground);
   border-radius: 9999px;
   transform-origin: left center;
-  transition: opacity var(--animation-timing), width var(--animation-timing),
-    rotate var(--animation-timing), translate var(--animation-timing);
+  transition:
+    opacity var(--animation-timing),
+    width var(--animation-timing),
+    rotate var(--animation-timing),
+    translate var(--animation-timing);
 }
 
 .hamburger__menu-btn input {
