--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="{{ .Site.LanguageCode }}">
   <head>
     {{ partial "meta.html" . }}
@@ -6,9 +6,7 @@
     {{ end }}
   </head>
   <body>
-    {{ partial "header.html" . }} 
-    {{ block "main" . }} 
-    {{ end }} 
+    {{ partial "header.html" . }} {{ block "main" . }}{{ end }}
     {{ partial "footer.html" . }}
     {{ block "scripts" . }}{{ end }}
   </body>
