--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -2,15 +2,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ .Site.Title }} - {{ .Title }}</title>
-  <link
-    href="/images/page/kepler-favicon.png"
-    rel="icon"
-    type="image/png "
-  />
+  <link href="/images/page/kepler-favicon.png" rel="icon" type="image/png " />
   {{- $mainCss := resources.Get "css/main.css" | minify | fingerprint -}}
-  <link rel="stylesheet" href="{{ $mainCss.RelPermalink }}" integrity="{{ $mainCss.Data.Integrity }}" />
+  <link
+    rel="stylesheet"
+    href="{{ $mainCss.RelPermalink }}"
+    integrity="{{ $mainCss.Data.Integrity }}"
+  />
   {{- $headerCss := resources.Get "css/header.css" | minify | fingerprint -}}
-  <link rel="stylesheet" href="{{ $headerCss.RelPermalink }}" integrity="{{ $headerCss.Data.Integrity }}" />
+  <link
+    rel="stylesheet"
+    href="{{ $headerCss.RelPermalink }}"
+    integrity="{{ $headerCss.Data.Integrity }}"
+  />
   {{- $footerCss := resources.Get "css/footer.css" | minify | fingerprint -}}
-  <link rel="stylesheet" href="{{ $footerCss.RelPermalink }}" integrity="{{ $footerCss.Data.Integrity }}" />
+  <link
+    rel="stylesheet"
+    href="{{ $footerCss.RelPermalink }}"
+    integrity="{{ $footerCss.Data.Integrity }}"
+  />
 </head>
