style: format missing files

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,7 +6,8 @@
     {{ end }}
   </head>
   <body>
-    {{ partial "header.html" . }} {{ block "main" . }}{{ end }}
+    {{ partial "header.html" . }}
+    {{ block "main" . }}{{ end }}
     {{ partial "footer.html" . }}
     {{ block "scripts" . }}{{ end }}
   </body>
